// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New project form is rendered correctly 1`] = `
<body>
  <div
    class="to-do-list"
  >
    <div
      class="project-field"
    >
      <button
        class="material-icons-outlined button button__arrow_back_ios project-field__expand-button"
      >
        arrow_back_ios
      </button>
      <span
        class="project-field__item project-field__item--active"
        data-project-index="0"
      >
        <span
          class="project-field__title"
        >
          My Project
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item"
        data-project-index="undefined"
      >
        <form
          class="project-field__form"
        >
          <input
            class="project-field__text-box"
            placeholder="Enter project name"
            required=""
          />
          <button
            class="material-icons-outlined button button__check"
          >
            check
          </button>
        </form>
      </span>
      <span
        class="project-field__item project-field__add"
      >
        <button
          class="material-icons-outlined button button__add"
        >
          add
        </button>
      </span>
    </div>
    <div
      class="task-field"
      data-project-index="0"
    >
      <h1
        class="task-field__project-title"
      >
        Task List for My Project
      </h1>
      <div
        class="task-field__task-list"
      />
      <button
        class="material-icons-outlined button button__add task-field__add-button"
      >
        add
      </button>
    </div>
  </div>
  <footer
    class="footer"
  >
    <a
      class="footer__link"
      href="https://github.com/palmerusaf/todo-list"
    >
      GitHub Repo
    </a>
    <img
      alt="git hub logo"
      class="footer__logo"
      src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
    />
  </footer>
</body>
`;

exports[`New project is created correctly 1`] = `
<body>
  <div
    class="to-do-list"
  >
    <div
      class="project-field"
    >
      <button
        class="material-icons-outlined button button__arrow_back_ios project-field__expand-button"
      >
        arrow_back_ios
      </button>
      <span
        class="project-field__item project-field__item--active"
        data-project-index="0"
      >
        <span
          class="project-field__title"
        >
          My Project
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item"
        data-project-index="1"
      >
        <span
          class="project-field__title"
        >
          Project one
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item project-field__add"
      >
        <button
          class="material-icons-outlined button button__add"
        >
          add
        </button>
      </span>
    </div>
    <div
      class="task-field"
      data-project-index="0"
    >
      <h1
        class="task-field__project-title"
      >
        Task List for My Project
      </h1>
      <div
        class="task-field__task-list"
      />
      <button
        class="material-icons-outlined button button__add task-field__add-button"
      >
        add
      </button>
    </div>
  </div>
  <footer
    class="footer"
  >
    <a
      class="footer__link"
      href="https://github.com/palmerusaf/todo-list"
    >
      GitHub Repo
    </a>
    <img
      alt="git hub logo"
      class="footer__logo"
      src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
    />
  </footer>
</body>
`;

exports[`New project is deleted correctly 1`] = `
<body>
  <div
    class="to-do-list"
  >
    <div
      class="project-field"
    >
      <button
        class="material-icons-outlined button button__arrow_back_ios project-field__expand-button"
      >
        arrow_back_ios
      </button>
      <span
        class="project-field__item project-field__item--active"
        data-project-index="0"
      >
        <span
          class="project-field__title"
        >
          My Project
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item project-field__add"
      >
        <button
          class="material-icons-outlined button button__add"
        >
          add
        </button>
      </span>
    </div>
    <div
      class="task-field"
      data-project-index="0"
    >
      <h1
        class="task-field__project-title"
      >
        Task List for My Project
      </h1>
      <div
        class="task-field__task-list"
      />
      <button
        class="material-icons-outlined button button__add task-field__add-button"
      >
        add
      </button>
    </div>
  </div>
  <footer
    class="footer"
  >
    <a
      class="footer__link"
      href="https://github.com/palmerusaf/todo-list"
    >
      GitHub Repo
    </a>
    <img
      alt="git hub logo"
      class="footer__logo"
      src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
    />
  </footer>
</body>
`;

exports[`New project is updated correctly 1`] = `
<body>
  <div
    class="to-do-list"
  >
    <div
      class="project-field"
    >
      <button
        class="material-icons-outlined button button__arrow_back_ios project-field__expand-button"
      >
        arrow_back_ios
      </button>
      <span
        class="project-field__item"
        data-project-index="0"
      >
        <span
          class="project-field__title"
        >
          My Project
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item project-field__item--active"
        data-project-index="1"
      >
        <span
          class="project-field__title"
        >
          Changed Project
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item project-field__add"
      >
        <button
          class="material-icons-outlined button button__add"
        >
          add
        </button>
      </span>
    </div>
    <div
      class="task-field"
      data-project-index="1"
    >
      <h1
        class="task-field__project-title"
      >
        Task List for Changed Project
      </h1>
      <div
        class="task-field__task-list"
      />
      <button
        class="material-icons-outlined button button__add task-field__add-button"
      >
        add
      </button>
    </div>
  </div>
  <footer
    class="footer"
  >
    <a
      class="footer__link"
      href="https://github.com/palmerusaf/todo-list"
    >
      GitHub Repo
    </a>
    <img
      alt="git hub logo"
      class="footer__logo"
      src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
    />
  </footer>
</body>
`;

exports[`New task is created correctly 1`] = `
<body>
  <div
    class="to-do-list"
  >
    <div
      class="project-field"
    >
      <button
        class="material-icons-outlined button button__arrow_back_ios project-field__expand-button"
      >
        arrow_back_ios
      </button>
      <span
        class="project-field__item project-field__item--active"
        data-project-index="0"
      >
        <span
          class="project-field__title"
        >
          My Project
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item project-field__add"
      >
        <button
          class="material-icons-outlined button button__add"
        >
          add
        </button>
      </span>
    </div>
    <div
      class="task-field"
      data-project-index="0"
    >
      <h1
        class="task-field__project-title"
      >
        Task List for My Project
      </h1>
      <div
        class="task-field__task-list"
      >
        <span
          class="task-field__task-item"
          data-due-date="2020-11-09"
          data-task-index="0"
        >
          <div
            class="task-field__main-view"
          >
            <label
              class="task-field__label task-field__title"
            >
              Title: 
              <span>
                Task One Title
              </span>
            </label>
            <label
              class="task-field__label task-field__due-date"
            >
              Due date: 
              <span>
                over 1 year ago
              </span>
            </label>
            <button
              class="material-icons-outlined button button__arrow_back_ios task-field__expand-button"
            >
              arrow_back_ios
            </button>
          </div>
          <div
            class="task-field__expanded-view task-field__expanded-view--hidden"
          >
            <div
              class="task-field__details"
            >
              <label
                class="task-field__label task-field__description"
              >
                Description: 
                <span>
                  Task One Description
                </span>
              </label>
              <label
                class="task-field__label task-field__priority"
              >
                Priority: 
                <span>
                  Low
                </span>
              </label>
            </div>
            <div
              class="task-field__button-field"
            >
              <button
                class="material-icons-outlined button button__check"
              >
                check
              </button>
              <button
                class="material-icons-outlined button button__edit"
              >
                edit
              </button>
              <button
                class="material-icons-outlined button button__delete"
              >
                delete
              </button>
            </div>
          </div>
        </span>
      </div>
      <button
        class="material-icons-outlined button button__add task-field__add-button"
      >
        add
      </button>
    </div>
  </div>
  <footer
    class="footer"
  >
    <a
      class="footer__link"
      href="https://github.com/palmerusaf/todo-list"
    >
      GitHub Repo
    </a>
    <img
      alt="git hub logo"
      class="footer__logo"
      src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
    />
  </footer>
</body>
`;

exports[`Project is selected correctly 1`] = `
<body>
  <div
    class="to-do-list"
  >
    <div
      class="project-field"
    >
      <button
        class="material-icons-outlined button button__arrow_back_ios project-field__expand-button"
      >
        arrow_back_ios
      </button>
      <span
        class="project-field__item"
        data-project-index="0"
      >
        <span
          class="project-field__title"
        >
          My Project
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item project-field__item--active"
        data-project-index="1"
      >
        <span
          class="project-field__title"
        >
          Project one
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item project-field__add"
      >
        <button
          class="material-icons-outlined button button__add"
        >
          add
        </button>
      </span>
    </div>
    <div
      class="task-field"
      data-project-index="1"
    >
      <h1
        class="task-field__project-title"
      >
        Task List for Project one
      </h1>
      <div
        class="task-field__task-list"
      />
      <button
        class="material-icons-outlined button button__add task-field__add-button"
      >
        add
      </button>
    </div>
  </div>
  <footer
    class="footer"
  >
    <a
      class="footer__link"
      href="https://github.com/palmerusaf/todo-list"
    >
      GitHub Repo
    </a>
    <img
      alt="git hub logo"
      class="footer__logo"
      src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
    />
  </footer>
</body>
`;

exports[`todo list and footer renders correctly 1`] = `
<body>
  <div
    class="to-do-list"
  >
    <div
      class="project-field"
    >
      <button
        class="material-icons-outlined button button__arrow_back_ios project-field__expand-button"
      >
        arrow_back_ios
      </button>
      <span
        class="project-field__item project-field__item--active"
        data-project-index="0"
      >
        <span
          class="project-field__title"
        >
          My Project
        </span>
        <span
          class="project-field__buttons"
        >
          <button
            class="material-icons-outlined button button__edit"
          >
            edit
          </button>
          <button
            class="material-icons-outlined button button__delete"
          >
            delete
          </button>
        </span>
      </span>
      <span
        class="project-field__item project-field__add"
      >
        <button
          class="material-icons-outlined button button__add"
        >
          add
        </button>
      </span>
    </div>
    <div
      class="task-field"
      data-project-index="0"
    >
      <h1
        class="task-field__project-title"
      >
        Task List for My Project
      </h1>
      <div
        class="task-field__task-list"
      />
      <button
        class="material-icons-outlined button button__add task-field__add-button"
      >
        add
      </button>
    </div>
  </div>
  <footer
    class="footer"
  >
    <a
      class="footer__link"
      href="https://github.com/palmerusaf/todo-list"
    >
      GitHub Repo
    </a>
    <img
      alt="git hub logo"
      class="footer__logo"
      src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
    />
  </footer>
</body>
`;
